Overflow fix

--- a/src/styles/HeaderStyle.scss
+++ b/src/styles/HeaderStyle.scss
@@ -1,7 +1,5 @@
 @import "Mixin.scss";
-* {
-  overflow: visible;
-}
+
 .logo-name {
   font-family: "Archivo Black", sans-serif;
   letter-spacing: 5px;
